--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* 
+ /* 
   PENNIO Color Palette (Approx.)
   Feel free to adjust these hex values to precisely match your brand’s colors.
 */
@@ -111,3 +111,10 @@ footer {
 html {
   scroll-behavior: smooth;
 }
+#insta-feed {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
